# CACIC-DevKIt

./: .gitignore  .readthedocs.yaml  Client  LICENSE  Makefile  README.md  ap-keepalive.sh  build.make  config_macros_template  install-cli.sh  install-gui.sh  install-server.sh  quick-install.sh  quick-uninstall.sh  server-keepalive.sh  setup_macros_file.py  steps_example  uninstall-cli.sh  uninstall-gui.sh  uninstall-server.sh
benchmark/: timer.cpp  timer.h
container_core/: Makefile  prepare_files_for_test.py  python.manifest  python.manifest.template  scacic_databse_calls.py  scacic_db_secure_interface.py  scacic_disk_manager.py  scacic_errors.py  scacic_frontend.py  scacic_macros.py  scacic_macros_temaplate.py  scacic_publish.py  scacic_query.py  scacic_tasks_calls.py  scacic_utils.py  test_client.py  test_id_and_key  test_post.py  test_server.py
core/client/: client.cpp  client.h  client_publish.cpp  client_publish.h  client_query.cpp  client_query.h  client_register.cpp  client_register.h
core/utils/: encryption.cpp  encryption.h  errors.cpp  errors.h  utils.cpp  utils.h
docs/: GUIA.txt  demonstration.rst  developing.rst  installation.rst  started.rst
docs/source/: about.rst  build.rst  client.rst  conf.py  database.rst  demo.rst  demonstration.rst  execution.rst  index.rst  installation.rst  organization.rst  processing.rst  requisites.rst  started.rst  tee.rst  types.rst
gramine_training_tests/: Makefile  main.py  python.manifest  python.manifest.template  python.sig
messages_examples/: content.json  publication.json  query.json
programmable_calls/: server_database_calls.cpp  server_database_calls.h  server_tasks_calls.cpp  server_tasks_calls.h
raw_programmable_calls/: server_database_calls.cpp  server_database_calls.h  server_tasks_calls.cpp  server_tasks_calls.h
use_case/ESP32SMFW/: ESP32SMFW.ino
use_case/client/: cli.cpp  client_apnet.cpp  client_generic_interface.cpp  client_generic_interface.h  client_key_manager.cpp  client_key_manager.h  client_permdb_config  client_permdb_config.cpp  client_permdb_config.h  client_permdb_manager.cpp  client_permdb_manager.h  client_uenet.cpp  client_uenet.h
use_case/database/: default_permissions.db  identity  (+2 more)
use_case/graphical-client/: CMakeLists.txt  Resources.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  perms_screen.cpp  perms_screen.h  perms_screen.ui  publish_screen.cpp  publish_screen.h  publish_screen.ui  queried_table_screen.cpp  queried_table_screen.h  queried_table_screen.ui  query_screen.cpp  query_screen.h  query_screen.ui  register_ap_screen.cpp  register_ap_screen.h  register_ap_screen.ui  register_ue_screen.cpp  register_ue_screen.h  register_ue_screen.ui  result_screen.cpp  result_screen.h  result_screen.ui
(+29 files in other folders)
